# trainings_sync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  build.yml  ci.yml  pr-build.yml  release-please.yml
app/: app.icns  cli.py
app/connectors/: base.py  garmin.py  garmin_wellness.py  local_folder.py  local_folder_wellness.py  strava.py  strava_wellness.py  wellness_base.py  wellness_capabilities.py
app/core/: cache.py  config.py  connector_factory.py  orchestrator.py  planner.py  sync.py  wellness_cache.py  wellness_orchestrator.py
app/credentials/: base.py  json_file.py  keepass.py
app/gui/: app.py  config_store.py  credential_provider.py
app/parsers/: base.py  fit.py  gpx.py  tcx.py
app/tracking/: console_renderer.py  gui_renderer.py  sync_logger.py  tracker.py
config_templates/: config.garmin-to-local.json  config.json  config.keepass.json  config.local-json.json  config.strava-and-garmin.json  config.strava-source.json  config.strava-to-garmin.json  creds.json  creds.strava-source.json
tests/: test_cli.py  test_dummy.py
tests/connectors/: test_base.py  test_garmin.py  test_garmin_wellness.py  test_local_folder.py  test_local_folder_wellness.py  test_strava.py  test_strava_wellness.py  test_wellness_base.py
tests/core/: test_cache.py  test_config.py  test_connector_factory.py  test_orchestrator.py  test_planner.py  test_sync.py  test_wellness_cache.py  test_wellness_orchestrator.py
tests/credentials/: test_base.py  test_json_file.py  test_keepass.py
tests/gui/: conftest.py  test_app.py  test_config_store.py  test_credential_provider.py
tests/parsers/: test_base.py  test_fit.py  test_gpx.py  test_tcx.py
tests/parsers/fixtures/: garmin_cycling.fit  garmin_cycling.gpx  strava_cycling.fit  strava_cycling.gpx  strava_cycling.tcx
tests/tracking/: test_console_renderer.py  test_sync_logger.py  test_tracker.py
